--- a/views/adminattendee.ejs
+++ b/views/adminattendee.ejs
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-        
-
-<body>
-
-
+<% include adminheader %>
+<div class="container-fluid">
 <p id="demo"></p>
 
 <div class="row">
@@ -13,5 +7,4 @@
     <h2>Total number of Attendees</h2>
    <p> Total : <%= result %></p>
   </div>
- </body>
-</html>
+</div>
