--- a/views/adminhomepage.ejs
+++ b/views/adminhomepage.ejs
@@ -1,33 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>.Edu Conference</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link href="/css/home.css" rel="stylesheet" type="text/css"/>
-</head>
-<body>
-    <form method="post" action="/index/adminhomepage">
-  <div class="container-fluid">
-        <div class="header clearfix">
-        <nav class="navbar navbar-inverse">  
-    <div class="navbar-header">
-      <a class="navbar-brand active" href="adminattendee">Attendee</a>
-      <a class="navbar-brand active" href="presenter">presenter</a>   
-      <a class="navbar-brand active" href="adminvendor">vendor</a>
-    </div>
-      <li class="pull-right">
-          <a class="navbar-brand active" href="/users/logout">Logout</a>
-      </li>
-      </nav>  
-        </div>
-  </div>
+<% include adminheader %>
       <br>
       <br>
       <h2>welcome to admin home page</h2>
-    </form>
-</body>
-</html>      
+     
   
-</body>
