--- a/views/presenter.ejs
+++ b/views/presenter.ejs
@@ -23,7 +23,7 @@
 		<div class="col-md-4">
 		<div class="form-group">
 			<label for="name">Name</label>
-			<input type="text" class="form-control" id="name" name="name1" required>
+			<input type="text" class="form-control" id="name" name="name" required>
 		</div>
 		</div>
 		<div class="col-md-4"></div>
