Add styling to admin pages and home page, authenticate admin routings

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,6 @@
 <div class="col-md-3"></div>
-<div class="col-md-8"><h2>Account Login</h2></div>
+
+<div class="col-md-8"><br><br><h2>Account Login</h2><br><br></div>
 <form method="post" action="/users/login">
 <div class="col-md-4"></div>
 <div class="col-md-4">
@@ -11,13 +12,13 @@
     <label>Password</label>
     <input type="password" class="form-control" name="password" placeholder="Password" required>
   </div>
-
+<br>
  <div class="row">
-		<div class="col-md-4"></div>
+		<div class="col-md-1"></div>
 		<div class="col-md-4">
 		<button type="submit" class="btn btn-primary">Submit</button></div>
 		<div class="col-md-4"></div>
-  <input type=button onClick="location.href='/users/register'" value='SignUp'>
+  <input class="btn btn-warning" type="button" onClick="location.href='/users/register'" value='SignUp'>
 
 </div>
 </form>
