--- a/views/home.ejs
+++ b/views/home.ejs
@@ -27,7 +27,8 @@
         </ul>
       </li>
       <li><a class="active" href="contact">Contact</a></li>
-      <li><a class="active" class="right" href="admin">Admin</a></li>
     </ul>
+      <li><a class="pull-right btn btn-warning navbar-btn" class="right" href="admin">Admin</a></li>
+    
   </div>
 </nav>
