--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -36,6 +36,7 @@
     <label>Confirm Password</label>
     <input type="password" class="form-control" placeholder="Password" name="password2" required>
   </div>
-  <button type="submit" class="btn btn-default">Submit</button>
+  <div class="col-md-4"></div>
+  <button type="submit" class="btn btn-primary">Submit</button>
 </div>
 </form>
