Fetch data in adminvendor

--- a/views/adminvendor.ejs
+++ b/views/adminvendor.ejs
@@ -1,7 +1,7 @@
 <% include adminheader %>
   
     <body>
-     <h2> Vendor</h2>
+     <h2> Vendor details list</h2>
      <br>
      <br>
         <div class="w3-container">
