Integrate Fac, graduate collections into Attendee

--- a/views/Graduatestudent.ejs
+++ b/views/Graduatestudent.ejs
@@ -49,7 +49,7 @@
 				<div class="col-md-4">
 					<div class="form-group">
 						<label for="topic">Program</label>
-						<input type="topic" class="form-control" id="topic" name="topic" required></div></div>
+						<input type="topic" class="form-control" id="program" name="program" required></div></div>
 				<div class="col-md-4"></div>
 			</div>
 			<div class="row">
