--- a/views/faculty.ejs
+++ b/views/faculty.ejs
@@ -43,7 +43,24 @@
 					<label for="contact">Contact Number</label>
 					<input type="text" class="form-control" id="contact" name="contact" required></div></div>
                     <div class="col-md-4"></div>
-				</div>    
+				</div>
+				<div class="row">
+					<div class="col-md-4"></div>
+					<div class="col-md-4">
+						<div class="form-group">
+							<label for="topic">Program</label>
+							<input type="topic" class="form-control" id="program" name="program" required></div></div>
+					<div class="col-md-4"></div>
+				</div>
+				<div class="row">
+					<div class="col-md-4"></div>
+					<div class="col-md-4">
+						<div class="form-group">
+							<label for="cheque">Presenter</label>
+							<input type="cheque" class="form-control" id="presenter" name="presenter" required></div></div>
+					<div class="col-md-4"></div>
+				</div>
+				    
 				<div class="row">
 					<div class="col-md-4"></div>
 					<div class="col-md-4">
