--- a/views/adminvendor.ejs
+++ b/views/adminvendor.ejs
@@ -1,11 +1,13 @@
 <% include adminheader %>
-  
+<head>
+	<link href="/css/AdminStyling.css" type="text/css" rel="stylesheet" />
+	</head>
     <body>
-     <h2> Vendor details list</h2>
+     <h2 align="center"> Vendor details list</h2>
      <br>
      <br>
         <div class="w3-container">
-        <table class="w3-table-all w3-card-4"id="rent"  align="center">
+        <table class="w3-table-all w3-card-4"id="Details"  align="center">
           <tr>
             <th>Company Name</th>
             <th>city</th>
