--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,6 +1,6 @@
 <div class="col-md-3"></div>
 <div class="col-md-8">
-  <h2>Register</h2>
+  <h2>.EDU Conference Admin Registration Page</h2>
   </div>
 {{#if user}}
         <div class="alert alert-danger">Username has taken already try new</div> 
