Add radio button for food option at user end

--- a/views/presenter.ejs
+++ b/views/presenter.ejs
@@ -74,8 +74,11 @@
 			<div class="col-md-4">
 				<div class="form-group">
 					<label for="Food">Food(Specify Veg or Non-Veg)</label><br>
-					<input type="food" class="form-control" id="food" name="food"></div></div>
+					<input type="radio" name="food" value="Veg">Veg<br>
+					<input type="radio" name="food" value="Non-Veg">Non-Veg<br>
 	<div class="col-md-4"></div>
+	</div>
+	</div>
 	</div>
 	<div class="row">
 			<div class="col-md-4"></div>
