--- a/views/Graduatestudent.ejs
+++ b/views/Graduatestudent.ejs
@@ -52,23 +52,17 @@
 						<input type="topic" class="form-control" id="program" name="program" required></div></div>
 				<div class="col-md-4"></div>
 			</div>
-			<div class="row">
-				<div class="col-md-4"></div>
-				<div class="col-md-4">
-					<div class="form-group">
-						<label for="presenter">Presenter</label>
-						<input type="cheque" class="form-control" id="presenter" name="presenter" required></div></div>
-				<div class="col-md-4"></div>
-			</div>
-			
 <div class="row">
                 <div class="col-md-4"></div>
                 <div class="col-md-4">
                     <div class="form-group">
                         <label for="Food">Food(Specify Veg or Non-Veg)</label><br>
-                        <input type="food" class="form-control" id="food" name="food"></div></div>
-        <div class="col-md-4"></div>
-        </div>
+						<input type="radio" name="food" value="Veg">Veg<br>
+						<input type="radio" name="food" value="Non-Veg">Non-Veg<br>
+		<div class="col-md-4"></div>
+		</div>
+		</div>
+		</div>
         <div class="row">
                 <div class="col-md-4"></div>
                 <div class="col-md-4">
