--- a/views/adminheader.ejs
+++ b/views/adminheader.ejs
@@ -13,8 +13,8 @@
     <div class="container-fluid">
         <ul class="nav navbar-nav">
             <li> <a class="navbar-brand active" href="adminattendee">&nbsp;Attendee &nbsp;</a> </li>
-            <li> <a class="navbar-brand active" href="/AdminPresenter">presenter &nbsp;</a>   </li>
-            <li> <a class="navbar-brand active" href="adminvendor">vendor &nbsp;</a> </li>
+            <li> <a class="navbar-brand active" href="/AdminPresenter">Presenter &nbsp;</a>   </li>
+            <li> <a class="navbar-brand active" href="adminvendor">Vendor &nbsp;</a> </li>
         </ul>
             <li class="pull-right">
              <a class="btn btn-danger navbar-btn" href="/users/logout">Logout</a> 
