--- a/views/faculty.ejs
+++ b/views/faculty.ejs
@@ -56,18 +56,12 @@
 					<div class="col-md-4"></div>
 					<div class="col-md-4">
 						<div class="form-group">
-							<label for="cheque">Presenter</label>
-							<input type="cheque" class="form-control" id="presenter" name="presenter" required></div></div>
-					<div class="col-md-4"></div>
-				</div>
-				    
-				<div class="row">
-					<div class="col-md-4"></div>
-					<div class="col-md-4">
-						<div class="form-group">
 							<label for="Food">Food(Specify Veg or Non-Veg)</label><br>
-							<input type="food" class="form-control" id="food" name="food"></div></div>
+							<input type="radio" name="food" value="Veg">Veg<br>
+							<input type="radio" name="food" value="Non-Veg">Non-Veg<br>
 			<div class="col-md-4"></div>
+			</div>
+			</div>
 			</div>
 			<div class="row">
 					<div class="col-md-4"></div>
