--- a/Assets/css/home.css
+++ b/Assets/css/home.css
@@ -11,3 +11,9 @@ body{
         width: 100%;   
         color: Black;
        }
+       .col{
+           float: right;
+       }
+       .ven{
+           margin-left: 230px;
+       }
