--- a/views/adminheader.ejs
+++ b/views/adminheader.ejs
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link href="/css/home.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
@@ -15,6 +17,13 @@
             <li> <a class="navbar-brand active" href="adminattendee">&nbsp;Attendee &nbsp;</a> </li>
             <li> <a class="navbar-brand active" href="/AdminPresenter">presenter &nbsp;</a>   </li>
             <li> <a class="navbar-brand active" href="adminvendor">vendor &nbsp;</a> </li>
+            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Update Info <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                  <a href="FeeDetails">Update Fee Details</a>
+                  <a href="ProgramDetails">Update Program Details</a>
+                  <a href="Deadlines">Update Deadlines</a>
+                </ul>
+              </li>
         </ul>
             <li class="pull-right">
              <a class="btn btn-danger navbar-btn" href="/users/logout">Logout</a> 
