--- a/views/adminvendor.ejs
+++ b/views/adminvendor.ejs
@@ -18,6 +18,7 @@
             <th>Contact Title</th>
             <th>Email</th>
             <th>Contact Number</th>
+            <th>Select</th>
           </tr>
     <% for(let i = 0; i < list.length; i++) { %>
     <tr>
@@ -30,6 +31,7 @@
       <td><%= list[i].Title %></td>
       <td><%= list[i].email %></td>
       <td><%= list[i].contact %></td>
+      <td><button type="button" class="btn btn-success">Confirm</button></td>
     </tr>
     <% } %>
   </table>
