Modify heading for Update fee details page

--- a/views/UpdateFeeDetails.ejs
+++ b/views/UpdateFeeDetails.ejs
@@ -1,7 +1,7 @@
 <% include adminheader %>
 
 <link href="/css/AdminStyling.css" type="text/css" rel="stylesheet" />
-<h3 style="text-align:center">Update Deadlines</h3>
+<h3 style="text-align:center">Update Fee Details</h3>
 
 <table class="w3-table-all w3-card-4" id="update"  align="center">
         <tr>
