--- a/views/adminheader.ejs
+++ b/views/adminheader.ejs
@@ -15,8 +15,8 @@
     <div class="container-fluid">
         <ul class="nav navbar-nav">
             <li> <a class="navbar-brand active" href="adminattendee">&nbsp;Attendee &nbsp;</a> </li>
-            <li> <a class="navbar-brand active" href="/AdminPresenter">presenter &nbsp;</a>   </li>
-            <li> <a class="navbar-brand active" href="adminvendor">vendor &nbsp;</a> </li>
+            <li> <a class="navbar-brand active" href="/AdminPresenter">Presenter &nbsp;</a>   </li>
+            <li> <a class="navbar-brand active" href="adminvendor">Vendor &nbsp;</a> </li>
             <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Update Info <span class="caret"></span></a>
               <ul class="dropdown-menu">
                   <a href="FeeDetails">Update Fee Details</a>
