--- a/views/adminvendor.ejs
+++ b/views/adminvendor.ejs
@@ -9,6 +9,7 @@
         <div class="w3-container">
         <table class="w3-table-all w3-card-4"id="Details"  align="center">
           <tr>
+            <th>Number</th>
             <th>Company Name</th>
             <th>city</th>
             <th>State</th>
@@ -22,6 +23,7 @@
           </tr>
     <% for(let i = 0; i < list.length; i++) { %>
     <tr>
+      <td><%= i+1 %></td>
       <td><%= list[i].cname %></td>
       <td><%= list[i].city %></td>
       <td><%= list[i].State %></td>
