make update info as editable, increase amount in cart acc. to food

--- a/views/UpdateDeadlines.ejs
+++ b/views/UpdateDeadlines.ejs
@@ -1,5 +1,7 @@
 <%include adminheader%>
 
+<div class="container">
+
 <link href="/css/AdminStyling.css" type="text/css" rel="stylesheet" />
 <h3 style="text-align:center">Update Deadlines</h3>
 
@@ -11,23 +13,24 @@
         </tr>
     </thead>
     <tr>
-      <td> Submit Proposal</td>
-      <td>March 1st, 2019 5:00 PM</td>
+      <td contenteditable="true"> Submit Proposal</td>
+      <td contenteditable="true">March 1st, 2019 5:00 PM</td>
     </tr>
     <tr>
-        <td>Notification of Proposal Acceptance</td>
-        <td>April 1st, 2019 5:00 PM</td>
+        <td contenteditable="true">Notification of Proposal Acceptance</td>
+        <td contenteditable="true">April 1st, 2019 5:00 PM</td>
     </tr>
     <tr>
-            <td>Early Bird Registration Opens</td>
-            <td>February 4th, 2019 5:00pm</td> 
+            <td contenteditable="true">Early Bird Registration Opens</td>
+            <td contenteditable="true">February 4th, 2019 5:00pm</td> 
     </tr>
     <tr>
-            <td>Early Bird Registration Ends</td>
-            <td>May 15th, 2019 5:00 PM</td> 
+            <td contenteditable="true">Early Bird Registration Ends</td>
+            <td contenteditable="true">May 15th, 2019 5:00 PM</td> 
     </tr>
     <tr>
-            <td>Submit Paper</td>
-            <td>September 13, 2019</td> 
+            <td contenteditable="true">Submit Paper</td>
+            <td contenteditable="true">September 13, 2019</td> 
     </tr>
+</div>
 </table>
