--- a/views/UpdateFeeDetails.ejs
+++ b/views/UpdateFeeDetails.ejs
@@ -1,5 +1,7 @@
 <% include adminheader %>
 
+<div class="container">
+
 <link href="/css/AdminStyling.css" type="text/css" rel="stylesheet" />
 <h3 style="text-align:center">Update Fee Details</h3>
 
@@ -10,33 +12,34 @@
           <th>What included?</th>
         </tr>
         <tr>
-          <td>Earlybird rate</td>
-          <td>$125</td> 
-          <td>Multiple session options, breakfast, lunch, conference notetaker</td>
+          <td contenteditable="true">Earlybird rate</td>
+          <td contenteditable="true">$125</td> 
+          <td contenteditable="true">Multiple session options, breakfast, lunch, conference notetaker</td>
         </tr>
         <tr>
-          <td>Regular rate</td>
-          <td>$150</td> 
-          <td>Multiple session options, breakfast, lunch, conference notetaker</td>
+          <td contenteditable="true">Regular rate</td>
+          <td contenteditable="true">$150</td> 
+          <td contenteditable="true">Multiple session options, breakfast, lunch, conference notetaker</td>
         </tr>
         <tr>
-            <td>Group (3 or more)</td>
-            <td>$125/person</td> 
-            <td>Multiple session options, breakfast, lunch, conference notetaker</td>
+            <td contenteditable="true">Group (3 or more)</td>
+            <td contenteditable="true">$125/person</td> 
+            <td contenteditable="true">Multiple session options, breakfast, lunch, conference notetaker</td>
           </tr>
           <tr>
-            <td>presenter</td>
-            <td>$100</td> 
-            <td>Multiple session options, breakfast, lunch, conference notetaker</td>
+            <td contenteditable="true">presenter</td>
+            <td contenteditable="true">$100</td> 
+            <td contenteditable="true">Multiple session options, breakfast, lunch, conference notetaker</td>
           </tr>
           <tr>
-            <td>High Ed rate</td>
-            <td>$50</td> 
-            <td>Multiple session options, breakfast, lunch</td>
+            <td contenteditable="true">High Ed rate</td>
+            <td contenteditable="true">$50</td> 
+            <td contenteditable="true">Multiple session options, breakfast, lunch</td>
           </tr>
           <tr>
-            <td>Onsite</td>
-            <td>$130</td> 
-            <td>Multiple session options, breakfast, lunch</td>
+            <td contenteditable="true">Onsite</td>
+            <td contenteditable="true">$130</td> 
+            <td contenteditable="true">Multiple session options, breakfast, lunch</td>
           </tr>
+        </div>
       </table>
