--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -35,7 +35,8 @@
   </div>
   <div class="column3">
   <h2>Amount</h2>
-    <p>$125</p>
+  <p> <%= amount %></p>
+   
    
   </div>
   
@@ -47,5 +48,6 @@
                      
     </div>
     </div>
+    
  </body>
 </html>
