--- a/views/vendor.ejs
+++ b/views/vendor.ejs
@@ -114,7 +114,26 @@
 			<input type="text" class="form-control" id="contact" name="contact" required></div></div>
 			<div class="col-md-4"></div>
 		</div>    
-
+		<div class="row">
+				<div class="col-md-4"></div>
+				<div class="col-md-4">
+					<div class="form-group">
+						<label for="Food">Food(Specify Veg or Non-Veg)</label><br>
+						<input type="radio" name="food" value="Veg">Veg<br>
+						<input type="radio" name="food" value="Non-Veg">Non-Veg<br>
+		<div class="col-md-4"></div>
+		</div>
+		</div>
+		</div>
+		<div class="row">
+				<div class="col-md-4"></div>
+				<div class="col-md-4">
+					<div class="form-group">
+						<label for="restrict">Do you have any dietary restrictions for the provided breakfast or lunch?</label>
+						<input type="restrict" class="form-control" id="restrict" name="restrict"></div></div>
+		<div class="col-md-4"></div>
+		</div>
+	</div>
 	<div class="row">
 		<div class="col-md-4"></div>
 		<div class="col-md-4">
