--- a/Assets/css/AdminStyling.css
+++ b/Assets/css/AdminStyling.css
@@ -29,11 +29,11 @@
 }
 
 #update td, #update th {
-    border: 1px solid #ddd;
-    padding: 8px;
+    
+    padding: 7px;
 }
 
-#update tr:nth-child(even){background-color: #f2f2f2;}
+
 
 #update tr:hover {background-color: #ddd;}
 
@@ -41,6 +41,6 @@
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: #211E1E;
+    background-color: #313030;;
     color: white;
 }
