--- a/views/UpdateProgramDetails.ejs
+++ b/views/UpdateProgramDetails.ejs
@@ -1,6 +1,10 @@
 <% include adminheader %>
+
+<div class="container">
+
 <link href="/css/AdminStyling.css" type="text/css" rel="stylesheet" />
 <h3 style="text-align:center">Update Program Details</h3>
+
 <table class="w3-table-all w3-card-4" id="update"  align="center">
         <thead>
             <tr>
@@ -10,48 +14,49 @@
             </tr>
         </thead>
         <tr>
-          <td> 7:30-8:30 a.m.  </td>
-          <td> Registration/Shuttle </td>
-          <td> TBD </td>
+          <td contenteditable="true"> 7:30-8:30 a.m.  </td>
+          <td contenteditable="true"> Registration/Shuttle </td>
+          <td contenteditable="true"> TBD </td>
         </tr>
         <tr>
-            <td>8:30-9:00 a.m.</td>
-            <td>Welcome/Light Breakfast</td>
-            <td> TBD </td>
+            <td contenteditable="true">8:30-9:00 a.m.</td>
+            <td contenteditable="true">Welcome/Light Breakfast</td>
+            <td contenteditable="true"> TBD </td>
         </tr>
         <tr>
-                <td>9:00-9:55 a.m.</td>
-                <td>Breakout Session #1:</td> 
-                <td> TBD </td>
+                <td contenteditable="true">9:00-9:55 a.m.</td>
+                <td contenteditable="true">Breakout Session #1:</td> 
+                <td contenteditable="true"> TBD </td>
         </tr>
         <tr>
-                <td>10:00-10:55 a.m.</td>
-                <td>Breakout Session #2:</td>
-                <td> TBD </td> 
+                <td contenteditable="true">10:00-10:55 a.m.</td>
+                <td contenteditable="true">Breakout Session #2:</td>
+                <td contenteditable="true"> TBD </td> 
         </tr>
         <tr>
-                <td>11:00-11:55 a.m.</td>
-                <td>Breakout Session #3:</td>
-                <td> TBD </td> 
+                <td contenteditable="true">11:00-11:55 a.m.</td>
+                <td contenteditable="true">Breakout Session #3:</td>
+                <td contenteditable="true"> TBD </td> 
         </tr>
         <tr>
-                <td>Noon-2:00 p.m.</td>
-                <td>Innovation Exhibition/Lunch</td>
-                <td> TBD </td> 
+                <td contenteditable="true">Noon-2:00 p.m.</td>
+                <td contenteditable="true">Innovation Exhibition/Lunch</td>
+                <td contenteditable="true"> TBD </td> 
         </tr>
         <tr>
-                <td>2:00-2:55 p.m.</td>
-                <td>Breakout Session #4:</td>
-                <td> TBD </td> 
+                <td contenteditable="true">2:00-2:55 p.m.</td>
+                <td contenteditable="true">Breakout Session #4:</td>
+                <td contenteditable="true"> TBD </td> 
         </tr>
         <tr>
-                <td>3:00-3:55 p.m.</td>
-                <td>Breakout Session #5:</td>
-                <td> TBD </td> 
+                <td contenteditable="true">3:00-3:55 p.m.</td>
+                <td contenteditable="true">Breakout Session #5:</td>
+                <td contenteditable="true"> TBD </td> 
         </tr>
         <tr>
-                <td>4:00 p.m.</td>
-                <td>Door Prizes and Closing</td>
-                <td> TBD </td> 
+                <td contenteditable="true">4:00 p.m.</td>
+                <td contenteditable="true">Door Prizes and Closing</td>
+                <td contenteditable="true"> TBD </td> 
         </tr>
+</div>
     </table>
