--- a/views/adminvendor.ejs
+++ b/views/adminvendor.ejs
@@ -18,6 +18,8 @@
             <th>Contact Title</th>
             <th>Email</th>
             <th>Contact Number</th>
+            <th>Food</th>
+            <th>Restrict</th>
             <th>Select</th>
           </tr>
     <% for(let i = 0; i < list.length; i++) { %>
@@ -31,6 +33,8 @@
       <td><%= list[i].Title %></td>
       <td><%= list[i].email %></td>
       <td><%= list[i].contact %></td>
+      <td><%= list[i].food %></td>
+      <td><%= list[i].restrict %></td>
       <td><button type="button" class="btn btn-success">Confirm</button></td>
     </tr>
     <% } %>
