--- a/views/presenter.ejs
+++ b/views/presenter.ejs
@@ -94,5 +94,6 @@
 		<div class="col-md-4">
 		<button type="submit" class="btn btn-primary">Submit</button></div>
 		<div class="col-md-4"></div>
+		<input type="text" name="confirm" hidden>
 </form>
 </div>  
