--- a/views/adminattendee.ejs
+++ b/views/adminattendee.ejs
@@ -1,46 +1,91 @@
 <% include adminheader %>
-<head>
-	<link href="/css/AdminStyling.css" type="text/css" rel="stylesheet" />
-	</head>
-	
-<div class="container">
-			<div class="row">
-					<div class="col-md-2"></div>
-					<body>
-              <div class="col-md-8">
-                        <h2 align="center"> Attendee Detail List </h2>
-                        <br>
-                      </div>
-                        <br>
-                        <br>
-                           <div class="w3-container">
-                           <table class="w3-table-all w3-card-4" id="Details"  align="center">
-                             <tr>
-                               <th>Number</th>
-                               <th>Name</th>
-                               <th>Email</th>
-                               <th>Program</th>
-                               <th>Food</th>
-                               <th>Restrict</th>
 
-                             </tr>
-                       <% for(let i = 0 ; i < list.length; i++) { %>
-                       <tr>
-                         <td><%= i+1 %></td>
-                         <td><%= list[i].name %></td>     
-                         <td><%= list[i].email %></td>
-                         <td><%= list[i].program %></td>
-                         <td><%= list[i].food %></td>
-                         <td><%= list[i].restrict %></td>
-                       </tr>
-                       <% } %>
-                     </table>
-                     
-                   </div>
-                   
+  <head>
+    <link href="/css/AdminStyling.css" type="text/css" rel="stylesheet" />
+  </head>
 
+  <div class="container">
+    <div class="row">
+      <div class="col-md-2"></div>
 
+      <body>
+        <div class="col-md-8">
+          <h2 align="center"> Attendee Detail List </h2>
+          <br>
+        </div>
+        <br>
+        <br>
+        <div class="w3-container">
+          <table class="w3-table-all w3-card-4" id="Details" align="center">
+            <tr>
+              <th>Number</th>
+              <th>Name</th>
+              <th>Email</th>
+              <th>Program</th>
+              <th>Food</th>
+              <th>Restrict</th>
 
+            </tr>
+            <% for(let i = 0 ; i < list.length; i++) { %>
+              <tr>
+                <td>
+                  <%= i+1 %>
+                </td>
+                <td>
+                  <%= list[i].name %>
+                </td>
+                <td>
+                  <%= list[i].email %>
+                </td>
+                <td>
+                  <%= list[i].program %>
+                </td>
+                <td>
+                  <%= list[i].food %>
+                </td>
+                <td>
+                  <%= list[i].restrict %>
+                </td>
+              </tr>
+              <% } %>
+          </table>
 
+          <button id="btnExport" onclick="fnExcelReport();"> Create Export </button>
+          
+        </div>
 
+        <script>
+           function fnExcelReport()
+                    {
+                      var tab_text="<table border='2px'><tr bgcolor='#87AFC6'>";
+                      var textRange; var j=0;
+                      tab = document.getElementById('Details'); // id of table
 
+                      for(j = 0 ; j < tab.rows.length ; j++) 
+                      {     
+                          tab_text=tab_text+tab.rows[j].innerHTML+"</tr>";
+        
+                      }
+
+                      tab_text=tab_text+"</table>";
+                      tab_text= tab_text.replace(/<A[^>]*>|<\/A>/g, "");
+                      tab_text= tab_text.replace(/<img[^>]*>/gi,""); 
+                      tab_text= tab_text.replace(/<input[^>]*>|<\/input>/gi, ""); 
+
+                      var ua = window.navigator.userAgent;
+                      var msie = ua.indexOf("MSIE "); 
+
+                      if (msie > 0 || !!navigator.userAgent.match(/Trident.*rv\:11\./))    
+                      {
+                        txtArea1.document.open("txt/html","replace");
+                        txtArea1.document.write(tab_text);
+                        txtArea1.document.close();
+                        txtArea1.focus(); 
+                        sa=txtArea1.document.execCommand("SaveAs",true,"Say Thanks to Conference.xls");
+                      }  
+                        else                
+                      sa = window.open('data:application/vnd.ms-excel,' + encodeURIComponent(tab_text));  
+
+                      return (sa);
+                      }
+                      </script>
