--- a/views/AdminPresenter.ejs
+++ b/views/AdminPresenter.ejs
@@ -51,7 +51,11 @@
                           <td><button disabled class="btn btn-success" >Confirmed</button></td>
                           <%}%>
                         </form>
-                         <td><button type="button" class="btn btn-danger">Delete</button></td>
+                        <form action="/sende" method="POST">
+                          <input type="text" name="presId" value="<%= list[i]._id %>" hidden>
+                          <input type="text" value="<%= list[i].email %>" name="email1" hidden>
+                         <td><button type="submit" class="btn btn-danger">Delete</button></td>
+                        </form>
                        </tr>
                        <% } %>
                      </table>
