--- a/views/adminheader.ejs
+++ b/views/adminheader.ejs
@@ -17,6 +17,7 @@
             <li> <a class="navbar-brand active" href="adminattendee">&nbsp;Attendee &nbsp;</a> </li>
             <li> <a class="navbar-brand active" href="/AdminPresenter">Presenter &nbsp;</a>   </li>
             <li> <a class="navbar-brand active" href="adminvendor">Vendor &nbsp;</a> </li>
+            <li> <a class="navbar-brand active" href="admincontact">FAQS &nbsp;</a> </li>
             <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Update Info <span class="caret"></span></a>
               <ul class="dropdown-menu">
                   <a href="FeeDetails">Update Fee Details</a>
@@ -24,6 +25,7 @@
                   <a href="Deadlines">Update Deadlines</a>
                 </ul>
               </li>
+              
         </ul>
             <li class="pull-right">
              <a class="btn btn-danger navbar-btn" href="/users/logout">Logout</a> 
