--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -36,7 +36,17 @@
     <label>Confirm Password</label>
     <input type="password" class="form-control" placeholder="Password" name="password2" required>
   </div>
-  <div class="col-md-4"></div>
-  <button type="submit" class="btn btn-primary">Submit</button>
-</div>
+  <div class="col-md-3"></div> 
+ <button class="btn btn-primary" onclick="goBack()">Go Back</button>
+  <div class="col-md-4"><button type="submit" class="btn btn-primary">Submit</button></div>
+
+
+				
+			</div>		
+	<script>
+	function goBack() {
+		window.history.back();
+	}
+	</script>
+  </div>
 </form>
