--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -53,7 +53,7 @@
       <br>
 <p>We are conducting several programs in this conference</p>
 
-<p>To register for the conference click on the registration tab and select the category you deserved</p>
+<p>To register for the conference click on the registration tab and select the category you deserve</p>
 
 <marquee behaviour="alternate" direction= "left">Hurry up and register early for the conference with reduced fee</marquee>
 </body>
