Add checkboxes for programs and implement password strength functionality

--- a/views/faculty.ejs
+++ b/views/faculty.ejs
@@ -90,14 +90,12 @@
 					<div class="col-md-4">
 						<div class="form-group">
 							<label for="topic">Program</label>
-							<select name="program" id="program" class="form-control">
-								<option value="3D printing">3D printing</option>
-								<option value="IT">IT</option>
-								<option value="Information Systems">Information Systems</option>
-								<option value="Early childhood education">Early childhood education</option>
-								<option value="Database and Data Mining">Database and Data Mining</option>
-								<option value="Algorithms and Bioinformatics">Algorithms and Bioinformatics</option>
-								</select></div></div>
+							<br>
+							<input type="checkbox" name="program" value="IT"> IT<br>
+							<input type="checkbox" name="program" value="Information Systems"> Information Systems<br>
+							<input type="checkbox" name="program" value="Early childhood education"> Early childhood education<br>
+							<input type="checkbox" name="program" value="Database and Data Mining"> Database and Data Mining<br>
+							<input type="checkbox" name="program" value="Algorithms and Bioinformatics"> Algorithms and Bioinformatics<br></div></div>
 					<div class="col-md-4"></div>
 				</div>
 				<div class="row">
