--- a/views/vendor.ejs
+++ b/views/vendor.ejs
@@ -17,13 +17,15 @@
 			</div>
 			<div class="col-md-2"></div>
 		</div>
+		<form method="POST" action="/vendor" role="form">
 		<div class="row">
 				<div class="col-md-4"></div>
 				<div class="col-md-4">
-				<div class="form-group">
-				<label for="Vendor">Select Category According to the conference </label>	
+				<div class="form-group"> 
+						
+				<label for="Vendor">Select Category </label>	
 		 
-			<select name="Vendor"Style="width:370px">
+				<select name="Vendor" id="Vendor" class="form-control">
 				<option value="Green">Green</option>
 				<option value="White">White</option>
 				<option value="Gray">Gray</option>
@@ -32,7 +34,7 @@
 	</div>
 </div>
 </div>
-<form method="POST" action="/vendor" role="form">
+
 
 	<div class="row">
 	<div class="col-md-4"></div>
