--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,7 +10,7 @@
   </div>
   <div class="form-group">
     <label>Password</label>
-    <input type="password" class="form-control" name="password" placeholder="Password" required>
+    <input type="password" class="form-control" name="password" placeholder="Password" minlength="6" required>
   </div>
 <br>
  <div class="row">
