--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -30,11 +30,11 @@
   </div>
   <div class="form-group">
     <label>Password</label>
-    <input type="password" class="form-control" placeholder="Password" name="password" required>
+    <input type="password" class="form-control" placeholder="Password" name="password" minlength="6" required>
   </div>
   <div class="form-group">
     <label>Confirm Password</label>
-    <input type="password" class="form-control" placeholder="Password" name="password2" required>
+    <input type="password" class="form-control" placeholder="Password" name="password2" minlength="6" required>
   </div>
   <div class="col-md-3"></div> 
  <button class="btn btn-primary" onclick="goBack()">Go Back</button>
