Add code allow users to select multiple programs

--- a/views/presenter.ejs
+++ b/views/presenter.ejs
@@ -57,12 +57,15 @@
 		<div class="col-md-4">
 			<div class="form-group">
 				<label for="topic">Topics to present</label>
-				<br>
-				<input type="checkbox" name="topic" value="IT"> IT<br>
-				<input type="checkbox" name="topic" value="Information Systems"> Information Systems<br>
-				<input type="checkbox" name="topic" value="Early childhood education"> Early childhood education<br>
-				<input type="checkbox" name="topic" value="Database and Data Mining"> Database and Data Mining<br>
-				<input type="checkbox" name="topic" value="Algorithms and Bioinformatics"> Algorithms and Bioinformatics<br></div></div>
+				<select multiple name="program" id="program" class="form-control">
+						<option value="3D printing">3D printing</option>
+						<option value="IT">IT</option>
+						<option value="Information Systems">Information Systems</option>
+						<option value="Early childhood education">Early childhood education</option>
+						<option value="Database and Data Mining">Database and Data Mining</option>
+						<option value="Algorithms and Bioinformatics">Algorithms and Bioinformatics</option>
+					  </select>
+					</div></div>
 		<div class="col-md-4"></div>
 	</div>
 	<div class="row">
