Fix storing presenter information to database issue

--- a/views/presenter.ejs
+++ b/views/presenter.ejs
@@ -57,7 +57,7 @@
 		<div class="col-md-4">
 			<div class="form-group">
 				<label for="topic">Topics to present</label>
-				<select multiple name="program" id="program" class="form-control">
+				<select multiple name="topic" id="topic" class="form-control">
 						<option value="3D printing">3D printing</option>
 						<option value="IT">IT</option>
 						<option value="Information Systems">Information Systems</option>
