--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,6 +28,16 @@
       </li>
       <li><a class="active" href="contact">Contact</a></li>
     </ul>
+    <ul class="nav navbar-nav">
+      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">more <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a class="active" href="travel">Travel & Lodging</a></li>
+          <li><a class="active" href="schedule">Schedule</a></li>
+          <li><a class="active" href="program">Program Details</a></li>
+          <li><a class="active" href="deadlines">Deadlines</a></li>
+        </ul>
+      </li>
+    </ul>
       <li><a class="pull-right btn btn-warning navbar-btn" class="right" href="admin">Admin</a></li>
     
   </div>
