--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -15,11 +15,14 @@
 <br>
  <div class="row">
 		<div class="col-md-2"></div>
-    <div class="col-md-3">
+    <div class="col-md-2">
 		<button type="submit" class="btn btn-primary">Submit</button></div>
-		<div class="col-md-3">
+		<div class="col-md-2">
   <input class="btn btn-warning" type="button" onClick="location.href='/users/register'" value='SignUp'>
   </div>
+  	<div class="col-md-4">
+  <input class="btn btn-primary" type="button" onClick="location.href='/forgotE'" value='Forgot Password'>
+</div>
   	<div class="col-md-2">
   <input class="btn btn-primary" type="button" onClick="location.href='/'" value='Home'>
 </div>
