--- a/views/forgotP.ejs
+++ b/views/forgotP.ejs
@@ -21,4 +21,6 @@
     <div class="col-md-4">
     <button type="submit" class="btn btn-primary">Submit</button></div>
     <div class="col-md-4"></div>
+</div>
+</div>
 </form>
