--- a/views/forgotE.ejs
+++ b/views/forgotE.ejs
@@ -25,5 +25,6 @@
 			<div class="col-md-4">
 			<button type="submit" class="btn btn-primary">Submit</button></div>
 			<div class="col-md-4"></div>
-		</form>
+			</div>
+			</form>
 		
