--- a/views/presenter.ejs
+++ b/views/presenter.ejs
@@ -103,5 +103,6 @@
 		<button type="submit" class="btn btn-primary">Submit</button></div>
 		<div class="col-md-4"></div>
 		<input type="text" name="confirm" hidden>
+		<input type="text" name="delete" hidden>
 </form>
 </div>  
