Add pages at admin side for update inforation functionality

--- a/views/UpdateDeadlines.ejs
+++ b/views/UpdateDeadlines.ejs
@@ -1,36 +1,59 @@
 <%include adminheader%>
 
 <div class="container">
-
-<link href="/css/AdminStyling.css" type="text/css" rel="stylesheet" />
-<h3 style="text-align:center">Update Deadlines</h3>
-
-<table class="w3-table-all w3-card-4" id="update"  align="center">
-    <thead>
-        <tr>
-            <th> Program Name </th>
-            <th> Date </th>
-        </tr>
-    </thead>
-    <tr>
-      <td contenteditable="true"> Submit Proposal</td>
-      <td contenteditable="true">March 1st, 2019 5:00 PM</td>
-    </tr>
-    <tr>
-        <td contenteditable="true">Notification of Proposal Acceptance</td>
-        <td contenteditable="true">April 1st, 2019 5:00 PM</td>
-    </tr>
-    <tr>
-            <td contenteditable="true">Early Bird Registration Opens</td>
-            <td contenteditable="true">February 4th, 2019 5:00pm</td> 
-    </tr>
-    <tr>
-            <td contenteditable="true">Early Bird Registration Ends</td>
-            <td contenteditable="true">May 15th, 2019 5:00 PM</td> 
-    </tr>
-    <tr>
-            <td contenteditable="true">Submit Paper</td>
-            <td contenteditable="true">September 13, 2019</td> 
-    </tr>
-</div>
-</table>
+        <div class="col-md-3"></div>
+        <div class="col-md-9">
+        
+        <form method="POST" action="/new" >
+            <div class="form-group">
+                <div class="col-md-2">
+            <label for = "Programname">Program Name:</label></div>
+            <div class="col-md-1">
+            <input type="text" name="programname"/></div></div><br><br>
+            <div class="form-group">
+                <div class="col-md-2">
+            <label for = "Date">Date & Time:</label></div>
+            <div class="col-md-1">
+            <input type="text" name="Date"/></div></div><br>
+            
+            <div align="center" class="form-group" >
+                <div class="col-md-5">
+            <input type="submit" class="btn btn-primary" /></div></div><br><br>
+        </div>
+        
+        </form>
+        
+                <link href="/css/AdminStyling.css" type="text/css" rel="stylesheet" />
+                <h3 style="text-align:center">Update Deadlines</h3>
+        
+                <table class="w3-table-all w3-card-4" id="update" align="center">
+                    <thead>
+                        <tr>
+                            <th> Program Name </th>
+                            <th> Date & Time </th>
+                            <th> Delete </th>
+                        </tr>
+                    </thead>
+                  
+                    <% for(let i = 0 ; i < list.length; i++) { %>
+                        <tr>
+                            <td >
+                                <%= list[i].programname %>
+                            </td>
+                            <td >
+                                <%= list[i].Date %>
+                            </td>
+                                            
+                                <form action="/deletedeadlines" method="POST">
+                                <input type="text" name="presId" value="<%= list[i]._id %>" hidden>
+                                <td><button type="submit" class="btn btn-danger">Delete</button></td>
+                                </form>
+                          
+                        </tr>
+                        <% } %>
+                        
+                        
+            </div>
+        
+            </table>
+        
