--- a/views/adminheader.ejs
+++ b/views/adminheader.ejs
@@ -22,7 +22,7 @@
               <ul class="dropdown-menu">
                   <a href="FeeDetails">Update Fee Details</a>
                   <a href="ProgramDetails">Update Program Details</a>
-                  <a href="Deadlines">Update Deadlines</a>
+                  <a href="/Deadline">Update Deadlines</a>
                 </ul>
               </li>
               
