--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,6 +26,7 @@
           <li><a class="active" href="vendor">Vendor</a></li>
         </ul>
       </li>
+      <li><a class="active" href="Conference">Conference Information</a></li>
       <li><a class="active" href="contact">Contact</a></li>
     </ul>
     <ul class="nav navbar-nav">
