--- a/views/AdminPresenter.ejs
+++ b/views/AdminPresenter.ejs
@@ -44,10 +44,10 @@
                          <form action="/send" method="POST">
                           <input type="text" name="confirm" value="<%= list[i].confirm %>"hidden>
                           <input type="text" value="<%= list[i].email %>" name="email1" hidden>
-                          <%if(list[i].confirm.length ==0){%>
+                          <%if(list[i].confirm == 0){%>
                          <td><button type="submit" class="btn btn-success" >Confirm</button></td>
                          <%}%>
-                         <%if(list[i].confirm.length !=0){%>
+                         <%if(list[i].confirm !=0){%>
                           <td><button disabled class="btn btn-success" >Confirmed</button></td>
                           <%}%>
                         </form>
