--- a/views/UpdateFeeDetails.ejs
+++ b/views/UpdateFeeDetails.ejs
@@ -1,45 +1,67 @@
-<% include adminheader %>
+<%include adminheader%>
 
 <div class="container">
+    <link href="/css/AdminStyling.css" type="text/css" rel="stylesheet" />
 
-<link href="/css/AdminStyling.css" type="text/css" rel="stylesheet" />
-<h3 style="text-align:center">Update Fee Details</h3>
+<div class="col-md-3"></div>
+<div class="col-md-9">
 
-<table class="w3-table-all w3-card-4" id="update"  align="center">
-        <tr>
-          <th>Registarion rates</th>
-          <th>Registarion fee</th> 
-          <th>What included?</th>
-        </tr>
-        <tr>
-          <td contenteditable="true">Earlybird rate</td>
-          <td contenteditable="true">$125</td> 
-          <td contenteditable="true">Multiple session options, breakfast, lunch, conference notetaker</td>
-        </tr>
-        <tr>
-          <td contenteditable="true">Regular rate</td>
-          <td contenteditable="true">$150</td> 
-          <td contenteditable="true">Multiple session options, breakfast, lunch, conference notetaker</td>
-        </tr>
-        <tr>
-            <td contenteditable="true">Group (3 or more)</td>
-            <td contenteditable="true">$125/person</td> 
-            <td contenteditable="true">Multiple session options, breakfast, lunch, conference notetaker</td>
-          </tr>
-          <tr>
-            <td contenteditable="true">presenter</td>
-            <td contenteditable="true">$100</td> 
-            <td contenteditable="true">Multiple session options, breakfast, lunch, conference notetaker</td>
-          </tr>
-          <tr>
-            <td contenteditable="true">High Ed rate</td>
-            <td contenteditable="true">$50</td> 
-            <td contenteditable="true">Multiple session options, breakfast, lunch</td>
-          </tr>
-          <tr>
-            <td contenteditable="true">Onsite</td>
-            <td contenteditable="true">$130</td> 
-            <td contenteditable="true">Multiple session options, breakfast, lunch</td>
-          </tr>
+<form method="POST" action="/fee" >
+    <div class="form-group">
+        <div class="col-md-3">
+    <label for = "Programname">Registarion rates:</label></div>
+    <div class="col-md-3">
+    <input type="text" name="rates" id="rates"/></div></div><br><br>
+    <div class="form-group">
+        <div class="col-md-3">
+    <label for = "fee">Registarion fee:</label></div>
+    <div class="col-md-2">
+    <input type="number" name="fee" id="fee"/></div></div><br>
+    <div class="form-group">
+        <div class="col-md-3">
+    <label for = "extra">What included?</label></div>
+    <div class="col-md-4">
+    <input type="text" name="extra" id="extra"/></div></div><br>
+    <div align="center" class="form-group" >
+        <div class="col-md-6">
+    <button  onclick="submit" class="btn btn-primary"/>submit</button></div><br><br>
         </div>
-      </table>
+    </div>
+</form>
+    <h3 style="text-align:center">Update Fee Details</h3>
+        <table class="w3-table-all w3-card-4" id="update" align="center">
+            <thead>
+                <tr>
+                    <th>Registarion Type</th>
+                    <th>Registarion fee</th> 
+                    <th>What included?</th>
+                    <th>Delete</th>
+                  </tr>
+            </thead>
+                     
+            <% for(let i = 0 ; i < list.length; i++) { %>
+              <tr>
+                  <td >
+                      <%= list[i].rates %>
+                  </td>
+                  <td >
+                      <%="$"+ list[i].fee %>
+                  </td>
+                  <td >
+                      <%= list[i].extra %>
+                  </td>
+                  <form action="/deletefee" method="POST">
+                    <input type="text" name="presId" value="<%= list[i]._id %>" hidden>
+                    <td><button type="submit" class="btn btn-danger">Delete</button></td>
+                    </form>
+                
+                  </form>
+                  
+                </tr>
+                <% } %>
+                
+                
+    </div>
+
+    </table>
+    </form>
