--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -9,48 +9,40 @@
         }
         </style>    
 </head>
-<h3 class="p1">Welcome to .EDU Conference</h3>
-<table id = "t" style="float:center" >
-    <tr>
-      <th>Registarion rates</th>
-      <th>Registarion fee</th> 
-      <th>What included?</th>
-    </tr>
-    <tr>
-      <td>Earlybird rate</td>
-      <td>$125</td> 
-      <td>Multiple session options, breakfast, lunch, conference notetaker</td>
-    </tr>
-    <tr>
-      <td>Regular rate</td>
-      <td>$150</td> 
-      <td>Multiple session options, breakfast, lunch, conference notetaker</td>
-    </tr>
-    <tr>
-        <td>Group (3 or more)</td>
-        <td>$125/person</td> 
-        <td>Multiple session options, breakfast, lunch, conference notetaker</td>
-      </tr>
-      <tr>
-        <td>presenter</td>
-        <td>$100</td> 
-        <td>Multiple session options, breakfast, lunch, conference notetaker</td>
-      </tr>
-      <tr>
-        <td>High Ed rate</td>
-        <td>$50</td> 
-        <td>Multiple session options, breakfast, lunch</td>
-      </tr>
-      <tr>
-        <td>Onsite</td>
-        <td>$130</td> 
-        <td>Multiple session options, breakfast, lunch</td>
-      </tr>
+<h3 class="p1">Welcome to .EDU Conference</h3><br>
+
+    <table class="w3-table-all w3-card-4" id="t" align="center">
+        <thead>
+                <tr >
+                        <th>Registarion Type</th>
+                        <th>Registarion fee</th> 
+                        <th>What included?</th>
+                       
+                      </tr>
+      </thead>      
+    
+      <% for(let i = 0 ; i < list.length; i++) { %>
+        <tr>
+            <td >
+                <%= list[i].rates %>
+            </td>
+            <td >
+                <%= " $"+list[i].fee  %>
+            </td>
+            <td >
+                <%= list[i].extra %>
+            </td>
+           
+          </tr>
+  
+          <% } %>
+  
+          </div>   
   </table>
   <body>  
       <br>
       <br>
-      <br>
+      
 <p>We are conducting several programs in this conference</p>
 
 <p>To register for the conference click on the registration tab and select the category you deserve</p>
