--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,17 +14,17 @@
   </div>
 <br>
  <div class="row">
-		<div class="col-md-2"></div>
-    <div class="col-md-2">
+		
+    <div class="col-md-3">
 		<button type="submit" class="btn btn-primary">Submit</button></div>
-		<div class="col-md-2">
+		<div class="col-md-3">
   <input class="btn btn-warning" type="button" onClick="location.href='/users/register'" value='SignUp'>
   </div>
   	<div class="col-md-4">
   <input class="btn btn-primary" type="button" onClick="location.href='/forgotE'" value='Forgot Password'>
 </div>
   	<div class="col-md-2">
-  <input class="btn btn-primary" type="button" onClick="location.href='/'" value='Home'>
+  <input class="btn btn-success" type="button" onClick="location.href='/'" value='Home'>
 </div>
 </div>
 </form>
