--- a/views/presenter.ejs
+++ b/views/presenter.ejs
@@ -58,12 +58,9 @@
 			<div class="form-group">
 				<label for="topic">Topics to present</label>
 				<select multiple name="topic" id="topic" class="form-control">
-						<option value="3D printing">3D printing</option>
-						<option value="IT">IT</option>
-						<option value="Information Systems">Information Systems</option>
-						<option value="Early childhood education">Early childhood education</option>
-						<option value="Database and Data Mining">Database and Data Mining</option>
-						<option value="Algorithms and Bioinformatics">Algorithms and Bioinformatics</option>
+					<% for(let i = 0 ; i < list.length; i++) { %>
+						<option value= '<%= list[i].add %>'><%= list[i].add %></option>							
+						<% } %> 
 					  </select>
 					</div></div>
 		<div class="col-md-4"></div>
