Add mail functionality for updated program details to all the registered attendees

--- a/views/UpdateFeeDetails.ejs
+++ b/views/UpdateFeeDetails.ejs
@@ -9,7 +9,7 @@
 <form method="POST" action="/fee" >
     <div class="form-group">
         <div class="col-md-3">
-    <label for = "Programname">Registarion rates:</label></div>
+    <label for = "Programname">Registarion Type:</label></div>
     <div class="col-md-3">
     <input type="text" name="rates" id="rates"/></div></div><br><br>
     <div class="form-group">
