--- a/views/UpdateProgramDetails.ejs
+++ b/views/UpdateProgramDetails.ejs
@@ -1,60 +1,76 @@
 <%include adminheader%>
 
-<div class="container">
-    <link href="/css/AdminStyling.css" type="text/css" rel="stylesheet" />
-       
+        <div class="container">
+                <link href="/css/AdminStyling.css" type="text/css" rel="stylesheet" />
 
-<div class="col-md-4"></div>
-<div class="col-md-8">
 
-<form method="POST" action="/pgm" >
-    <div class="form-group">
-            <div class="col-md-2">
-    <label for = "Time">Time:</label></div>
-            <div class="col-md-1">
-    <input type="text" name="Time"/></div></div><br><br>
-    <div class="form-group">
-            <div class="col-md-2">
-    <label for = "Activity">Activity:</label></div>
-            <div class="col-md-1">
-    <input type="text" name="Activity"/></div></div><br>
-    <div class="form-group">
-            <div class="col-md-2">
-    <label for = "Location">Location</label></div>
-    <div class="col-md-1">
-    <input type="text" name="Location"/></div></div><br>
-    <div align="center"class="form-group">
-            <div class="col-md-6">
-    <input type="submit" class="btn btn-primary"/></div><br><br>
-    </div>
-</div>
-</form>
-<h3 style="text-align:center">Update Program Details</h3>
-        <table class="w3-table-all w3-card-4" id="update" align="center">
-            <thead>
-                <tr>
-                    <th>Time</th>
-                    <th>Activity</th> 
-                    <th>Location</th>
-                    <th>Delete</th>
-                  </tr>
-            </thead>
-          
-            <% for(let i = 0 ; i < list.length; i++) { %>
-              <tr>
-                  
-                  <td ><%= list[i].Time %></td>
-                  <td ><%= list[i].Activity %></td>
-                  <td ><%= list[i].Location %></td>
-             
-                  <form action="/deletepgm" method="POST">
-                    <input type="text" name="presId" value="<%= list[i]._id %>" hidden>
-                    <td><button type="submit" class="btn btn-danger">Delete</button></td>
-                    </form>
-                </tr>
-                <% } %>
-                
-                
-    </div>
+                <div class="col-md-4"></div>
+                <div class="col-md-8">
 
-    </table>
+                        <form method="POST" action="/pgm">
+                                <div class="form-group">
+                                        <div class="col-md-2">
+                                                <label for="Time">Time:</label></div>
+                                        <div class="col-md-1">
+                                                <input type="text" name="Time" /></div>
+                                </div><br><br>
+                                <div class="form-group">
+                                        <div class="col-md-2">
+                                                <label for="Activity">Activity:</label></div>
+                                        <div class="col-md-1">
+                                                <input type="text" name="Activity" /></div>
+                                </div><br>
+                                <div class="form-group">
+                                        <div class="col-md-2">
+                                                <label for="Location">Location</label></div>
+                                        <div class="col-md-1">
+                                                <input type="text" name="Location" /></div>
+                                </div><br>
+                                <div align="center" class="form-group">
+                                        <div class="col-md-6">
+                                                <input type="submit" class="btn btn-primary" /></div><br><br>
+                                </div>
+                </div>
+                </form>
+                <h3 style="text-align:center">Update Program Details</h3>
+                <table class="w3-table-all w3-card-4" id="update" align="center">
+                        <thead>
+                                <tr>
+                                        <th>Time</th>
+                                        <th>Activity</th>
+                                        <th>Location</th>
+                                        <th>Delete</th>
+                                </tr>
+                        </thead>
+
+                        <% for(let i = 0 ; i < list.length; i++) { %>
+                                <tr>
+                                        <td>
+                                                <%= list[i].Time %>
+                                        </td>
+                                        <td>
+                                                <%= list[i].Activity %>
+                                        </td>
+                                        <td>
+                                                <%= list[i].Location %>
+                                        </td>
+
+                                        <form action="/deletepgm" method="POST">
+                                                <input type="text" name="presId" value="<%= list[i]._id %>" hidden>
+                                                <td><button type="submit" class="btn btn-danger">Delete</button></td>
+                                        </form>
+                                </tr>
+                                <% } %>
+        </div>
+        </table>
+        <form action="/pgmmail" method="POST">
+                <!-- <input type="text" value=' -->
+                <button type="submit" onclick="myFunction()" class="btn btn-success">Submit</button>
+
+        </form>
+        <script>
+                function myFunction() {
+
+                        alert("Email has been sent");
+                }
+        </script>
