--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,8 @@
-<div class="col-md-3"></div>
-
+<br><div class="col-md-10"></div>
+<div class="col-md-1">
+ <input class="btn btn-danger" type="button" onClick="location.href='/users/register'" value='SignUp'></div>
+   <input class="btn btn-success" type="button" onClick="location.href='/'" value='Home'>
+   <div class="col-md-4"></div>
 <div class="col-md-8"><br><br><h2>.Edu Conference Account Login</h2><br><br></div>
 <form method="post" action="/users/login">
 <div class="col-md-4"></div>
@@ -14,17 +17,12 @@
   </div>
 <br>
  <div class="row">
-		
-    <div class="col-md-3">
-		<button type="submit" class="btn btn-primary">Submit</button></div>
-		<div class="col-md-3">
-  <input class="btn btn-warning" type="button" onClick="location.href='/users/register'" value='SignUp'>
-  </div>
-  	<div class="col-md-4">
-  <input class="btn btn-primary" type="button" onClick="location.href='/forgotE'" value='Forgot Password'>
-</div>
+		<div class="col-md-1"></div>
+    <div class="col-md-6">
+		<button type="submit" class="btn btn-primary">Submit</button></div>	
   	<div class="col-md-2">
-  <input class="btn btn-success" type="button" onClick="location.href='/'" value='Home'>
+  <input class="btn btn-warning" type="button" onClick="location.href='/forgotE'" value='Forgot Password'>
 </div>
+  
 </div>
 </form>
