--- a/views/forgotE.ejs
+++ b/views/forgotE.ejs
@@ -10,7 +10,7 @@
 		</div>
 		<div class="col-md-2"></div>
 	</div>
-	<form action="/forgotP" method="POST">
+	<form action="/forgot" method="POST">
 
 		<div class="row">
 			<div class="col-md-4"></div>
@@ -24,7 +24,7 @@
 		<div class="row">
 			<div class="col-md-4"></div>
 			<div class="col-md-4">
-				<button type="submit" class="btn btn-primary">Submit</button></div>
+				<button type="submit" class="btn btn-primary">Reset</button></div>
 			<div class="col-md-4"></div>
 		</div>
 	</form>
