Add req.flash() for reset password

--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -14,24 +14,23 @@
     <div class="header clearfix">
       <div class="row">
         <div class="col-lg-12">
-          {{#if success_msg}}
-          <div class="alert alert-success">{{success_msg}}</div>
-          {{/if}} {{#if error_msg}}
-          <div class="alert alert-danger">{{error_msg}}</div>
-          {{/if}} {{#if error}}
-          <div class="alert alert-danger">{{error}}</div>
-          {{/if}} {{{body}}}
-          {{/if}} {{#if error}}
-          <div class="alert alert-danger">{{error}}</div>
-          {{/if}} {{{body}}}
-          {{/if}} {{#if message.error}}
-          <div class="alert alert-info">{{}}</div>
-          {{/if}} {{{body}}}
-          {{/if}} {{#if message.error}}
-          <div class="alert alert-info">{{message.info}}</div>
-          {{/if}} {{{body}}}
-        </div>
+       {{#if success_msg}}
+            <div class="alert alert-success">{{success_msg}}</div>
+          {{/if}}
 
+          {{#if error_msg}}
+            <div class="alert alert-danger">{{error_msg}}</div>
+          {{/if}}
+
+    
+
+           {{#if info_msg}}
+            <div class="alert alert-danger">{{info_msg}}</div>
+          {{/if}}
+
+
+          
+          {{{body}}}
 
       </div>
     </div>
