Fix errors in check payment page

--- a/views/Paymentthroughcheck.ejs
+++ b/views/Paymentthroughcheck.ejs
@@ -30,7 +30,7 @@
 				</div>
 				<div class="col-md-2"></div>
 			</div>
-			<!--<form method="POST" action="views" role="form">-->
+			<form method="POST" action="views" role="form">
 			<div class="row">
 				<div class="col-md-4"></div>
 				<div class="col-md-4">
@@ -70,19 +70,17 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4"></div>
-				<div class="col-md-2">
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <input type=button onClick="location.href='homepage'"
-					 value='Submit'>
+				<div class="col-md-3">
+						<button type="submit" class="btn btn-primary ">Submit</button>					
 				</div>
-				<div class="col-md-4"> <button onclick="goBack()">Go Back</button></div>
+			</form>
+				<div class="col-md-3">
+					<input class="btn btn-warning " type="button" onClick="location.href='/'" value='Back'>
+				</div>
 			</div>
 
 		</div>
-		<script>
-			function goBack() {
-				window.history.back();
-			}
-		</script>
+		
 </body>
 
 </html>
