Fix couponcode, adminvendor, paythroughcheck issues

--- a/views/Paymentthroughcheck.ejs
+++ b/views/Paymentthroughcheck.ejs
@@ -75,7 +75,8 @@
 				</div>
 			</form>
 				<div class="col-md-3">
-					<input class="btn btn-warning " type="button" onClick="location.href='/'" value='Back'>
+						<a href='/'><button class="btn btn-primary" type="button" value="Go Back" >Go Back</button></a>
+					<!-- <input class="btn btn-warning " type="button" onClick="location.href='/'" value='Back'> -->
 				</div>
 			</div>
 
