--- a/views/presenter.ejs
+++ b/views/presenter.ejs
@@ -105,6 +105,8 @@
 		<div class="col-md-4">
 			<button type="submit" class="btn btn-primary">Submit</button></div>
 		<div class="col-md-4"></div>
+		<input type="text" name="confirm" hidden>
+		<input type="text" name="delete" hidden>
 		</form>
 	</div>
 	
