--- a/views/PayThroughCards.ejs
+++ b/views/PayThroughCards.ejs
@@ -16,19 +16,15 @@
 
 	<h2> &nbsp;&nbsp;This Page is redirected to northwest Gateway</h2>
 	<div>
-		<br><br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button onclick="goBack()">Go
-			Back</button>
+			<a href='/'><button class="btn btn-primary" type="button" value="Go Back" >Go Back</button></a>
+		<!-- <br><br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button onclick="goBack()">Go
+			Back</button> -->
 	</div>
 
 
 
 
-	<script>
-		function goBack() {
-			window.history.back();
-		}
-	</script>
-
+	
 </body>
 
 </html>
